--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>This is the title</title>
+  </head>
+  <body>
+    <h1>This is the body title</h1>
+  </body>
+</html>
